# Audiometric_project

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
conf/base/: catalog.yml  parameters.yml
notebooks/: test.ipynb
src/gain_project/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/gain_project/nodes/: evaluate.py  inference.py  preprocess.py  split.py  train.py
src/gain_project/nodes/tonal/: inference.py  preprocess.py  simulator.py  split.py  train.py
src/gain_project/nodes/vocal/: inference.py  preprocess.py  simulator.py  split.py  train.py
src/gain_project/pipelines/data_engineering/: __init__.py  pipeline.py
src/gain_project/pipelines/feature_engineering/: __init__.py  pipeline.py
src/gain_project/pipelines/inference/: pipeline.py
src/gain_project/pipelines/tonal_pipelines/: data_engineering.py  feature_engineering.py  generation.py  inference.py  training.py
src/gain_project/pipelines/training/: pipeline.py
src/gain_project/pipelines/vocal_pipelines/: data_engineering.py  feature_engineering.py  generation.py  inference.py  training.py
templates/: index.html
tests/: test_api.py  test_tonal_nodes.py  test_vocal_nodes.py
